# flipstone

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
.github/workflows/: cmake.yml
cli/: CMakeLists.txt  main.c  main.cpp
cli/include/: interface.hpp  reversi_ai.hpp
cli/src/: CMakeLists.txt  interface.cpp  main.cpp  reversi_ai.cpp
include/: cell.hpp  direction.hpp  field.h  field.hpp  fieldslice.hpp  point.hpp  reversi.hpp
include/flipstone/: cell.hpp  direction.hpp  field.hpp  fieldslice.hpp  point.hpp  reversi.hpp
src/: CMakeLists.txt  Field.c  Field.h  Point.h  Search.c  access.c  access.cpp  ai.c  ai.cpp  count.c  count.cpp  field.c  field.cpp  fieldslice.cpp  logic.c  logic.cpp  main.c  reversi.cpp  search.c  search.cpp
src/Field/: AI.c  Access.c  CMakeLists.txt  Count.c  Field.c  Field.h  Logic.c  Search.c
src/Point/: CMakeLists.txt  Point.c
tests/: CMakeLists.txt  test_direction.cpp  test_field.cpp  test_point.cpp  test_reversi.cpp
